added random company

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -5,19 +5,22 @@
     <title>Project Management Group Project</title>
     <script src="../vendors/jquery-1.12.3.js" type="text/javascript"></script>
     <script src="../client.js" type="text/javascript"></script>
+    <script src="../vendors/bootstrap.min.css" charset="utf-8"></script>
   </head>
   <body>
 
     <div class="onLoad">
       <button type="button" id="createProject">Generate Project</button>
     </div>
+<div class="row">
 
-    <div class="clickProjectButton">
-    </div>
 
+    <div id="clickProjectButton" class="col-md-3">
+    </div >
+</div>
     <div class="employeeData">
     </div>
 
-    <!-- <button type="button" id="ajaxGenName">Assign Staff</button> -->  
+    <!-- <button type="button" id="ajaxGenName">Assign Staff</button> -->
   </body>
 </html>
