styled and added remove button

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -8,7 +8,7 @@
     <script src="../vendors/bootstrap.min.css" charset="utf-8"></script>
   </head>
   <body>
-
+<h1>Project Management Project</h1>
     <div class="onLoad">
       <button type="button" id="createProject">Generate Project</button>
     </div>
@@ -20,7 +20,8 @@
 </div>
     <div class="employeeData">
     </div>
-
+<button type="button" id="remove">Remove Project</button>
     <!-- <button type="button" id="ajaxGenName">Assign Staff</button> -->
   </body>
+
 </html>
